<resources>
    <string name="app_name">Rev Application Demo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="rev_app_demo">Rev Application Demo</string>
    <string name="query">Enter new query...</string>


    <string name="main">Main</string>
    <string name="config_view">Configuration view</string>
    <string name="stat_view">Statistic view</string>
    <string name="log_view">Log view</string>
    <string name="compatibility">Compatibility</string>
    <string name="about">About...</string>

    <string name="name">Name:</string>
    <string name="value">Value:</string>
    <string name="stat_main">Main:</string>
    <string name="stat_carrier">Carrier:</string>
    <string name="stat_device">Device:</string>
    <string name="stat_events">Events:</string>
    <string name="stat_location">Location:</string>
    <string name="stat_network">Network:</string>
    <string name="stat_Requests">Requests:</string>
    <string name="stat_wifi">WiFi:</string>
    <string name="crash_toast_text">Text</string>

    <string name="weather">Weather</string>
    <string name="today">Today</string>
    <string name="day5">For 5 days</string>
    <string name="day16">For 16 days</string>
    <string name="weather_api_key">65e8cf8e51dbd1e999dabb56f569651a</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tester">Query constructor</string>
</resources>
