<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/main" />
        <item
            android:id="@+id/config_view"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/config_view" />
        <item
            android:id="@+id/stat_view"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/stat_view" />
        <item
            android:id="@+id/log_view"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/log_view" />
        <item
            android:id="@+id/compatibility"
            android:icon="@drawable/ic_menu_compatibility"
            android:title="@string/compatibility" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/about" />
            <!--
                        <item android:id="@+id/nav_send" android:icon="@drawable/ic_menu_send"
                            android:title="Send" />
            -->
        </menu>
    </item>

</menu>
