<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rev.revdemo.fragments.StatFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMain"
                android:text="@string/stat_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/rvMain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="LinearLayoutManager"></android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/tvCarrier"
                android:text="@string/stat_carrier"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/rvCarrier"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="LinearLayoutManager"></android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/tvDevice"
                android:text="@string/stat_device"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/rvDevice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="LinearLayoutManager"></android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/tvEvents"
                android:text="@string/stat_events"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/rvEvents"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="LinearLayoutManager"></android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/tvLocation"
                android:text="@string/stat_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/rvLocation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="LinearLayoutManager"></android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/tvNetwork"
                android:text="@string/stat_network"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/rvNetwork"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="LinearLayoutManager"></android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/tvRequests"
                android:text="@string/stat_Requests"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/rvRequests"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="LinearLayoutManager"></android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/tvWiFi"
                android:text="@string/stat_wifi"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/rvWiFi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="LinearLayoutManager"></android.support.v7.widget.RecyclerView>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
